Attempt at solving iOS column spacing issue

--- a/src/styles/_btn.scss
+++ b/src/styles/_btn.scss
@@ -1,4 +1,5 @@
 .btn {
+    margin: 0;
     height: 40px;
     font-size: 20px;
 
