--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -65,6 +65,8 @@ button:focus {
     display: flex;
     flex-direction: column;
     flex-basis: 25%;
+    margin: 0;
+    padding: 0;
 }
 
 .row {
