--- a/src/styles/navigation/_navigation.scss
+++ b/src/styles/navigation/_navigation.scss
@@ -32,7 +32,7 @@
 .nav-is-open {
     .main-navigation {        
         border-radius: 0;
-        transform: none;
+        transform: translate(0, 0);
         opacity: 1;
     }
 }
